--- a/third_repo.html
+++ b/third_repo.html
@@ -120,8 +120,14 @@ $(document).ready(function () {
 </div>
 
 
-<div id="asignment-3" class="section level2">
-<h2>Asignment 3</h2>
+<div id="introduction" class="section level2">
+<h2>Introduction</h2>
+<p>The main goal of this third assignment is to gather web based data from at least two sources, merge the data sets, conduct basic descriptive and some inferential statistics on the data to address a relevant research question and briefly describe the results including with dynamically generated tables and figures.</p>
+<p>We have gathered to different datasets from two different data sources. The first dataset is from the CIA World Fact book, and the second from the The Quality of Government Institute (QOG), which is part of the University of Gothenburg. Both datasets are open and can be found in their respective webpages.</p>
+<p>In order to produce a tangible statistical analysis we have cleaned and merged the relevant data of both datasets. Then, we have related the data with the aim of adressing, as well as possible, our researching question to begin to determine whether our hypothesis is correct or not.</p>
+</div>
+<div id="detailed-process" class="section level2">
+<h2>Detailed process</h2>
 <p>Purpose: Gather, clean, and (begin to) analyse data Deadline: 11 November You will submit a GitHub repo that: - Gathers web-based data from at least two sources. Cleans and merges the data so that it is ready for statistical analyses. - Conducts basic descriptive statistics with the data to address a relevant research question. Could include inferential stats. - Briefly describes the results including with dynamically generated tables and figures. - Has a write up of 1,500 words maximum that describes the data gathering and analysis, It also will use literate programming</p>
 <p>Note that the <code>echo = FALSE</code> parameter was added to the code chunk to prevent printing of the R code that generated the plot.</p>
 </div>
