--- a/third_repo.html
+++ b/third_repo.html
@@ -124,7 +124,7 @@ $(document).ready(function () {
 <h2>Introduction</h2>
 <p>The main goal of this third assignment is to gather web based data from at least two sources, merge the data sets, conduct basic descriptive and some inferential statistics on the data to address a relevant research question and briefly describe the results including with dynamically generated tables and figures.</p>
 <p>We have gathered to different datasets from two different data sources. The first dataset is from the CIA World Fact book, and the second from the The Quality of Government Institute (QOG), which is part of the University of Gothenburg. Both datasets are open and can be found in their respective webpages.</p>
-<p>In order to produce a tangible statistical analysis we have cleaned and merged the relevant data of both datasets. Then, we have related the data with the aim of adressing, as well as possible, our researching question to begin to determine whether our hypothesis is correct or not.</p>
+<p>In order to produce a tangible statistical analysis we have cleaned and merged the relevant data of both datasets. Then, we have generate tables and figures to relate the data with the aim of adressing, as well as possible, our researching question to begin to determine whether our hypothesis is correct or not.</p>
 </div>
 <div id="detailed-process" class="section level2">
 <h2>Detailed process</h2>
